3-warm-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warm-runner
spec:
  replicas: 5 #! For now, if you want more performance, by all means go ahead
  selector:
    matchLabels:
      app: warm-runner
  template:
    metadata:
      labels:
        app: warm-runner
        status: ready
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 0
      containers:
        - name: warm-runner
          image: warm-runner
          imagePullPolicy: Never
          command: ["sleep", "infinity"]
          resources:
            requests:
              memory: "60Mi"
              cpu: "100m"
              ephemeral-storage: "100Mi"
            limits:
              memory: "150Mi"
              cpu: "250m"
              ephemeral-storage: "100Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
              add:
                - "SETUID" #? Requirements: switch to user 6969
                - "SETGID" #? Requirements: switch to grp 7070
                - "CHOWN" #? Requirements: chowning files
                - "DAC_OVERRIDE" #? For cleanup
                - "KILL"
